# poc-rust-ts-block

./: Cargo.toml  README.md
app/: Cargo.toml  build.rs
app/src/: main.rs
builder/: Cargo.toml
builder/src/: lib.rs  strnom.rs
common/: Cargo.toml
common/src/: lib.rs
macro/: Cargo.toml
macro-impl/: Cargo.toml
macro-impl/src/: lib.rs
macro/src/: lib.rs
test-macro/: Cargo.toml
test-macro/src/: lib.rs
