[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ts_block_builder = { path = "../builder", version = "=0.1.0" }

[build-dependencies]
ts_block_builder = { path = "../builder", version = "=0.1.0" }