[package]
name = "test-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.86"
syn = { version = "2.0.71", features = ["full", "extra-traits"] }
quote = "1.0.36"

[dev-dependencies]
pretty_assertions = "1.4.0"
